test/libhyperion/syntaxTests/structs/calldata_struct_function_type.hyp
pragma abicoder               v2;
contract C {
    struct S { function (uint) external returns (uint) fn; }
    function f(S calldata s) external returns (uint256 a) {
        return s.fn(42);
    }
}
// ----
// TypeError 4888: (62-104): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
